# SentrixViz

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  PHASE2_PLAN.md  PHASE3_PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/sentrixviz/: __init__.py  cli.py  normalize.py
src/sentrixviz.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/sentrixviz/core/: __init__.py  fields.py  model.py  protocols.py
src/sentrixviz/layers/: __init__.py  cluster.py  derived.py  field.py  heatmap.py  interpolate.py  topology.py
src/sentrixviz/live/: __init__.py  session.py
src/sentrixviz/render/: __init__.py  mpl.py
src/sentrixviz/sources/: __init__.py  live.py  parquet.py  sync.py
src/sentrixviz/timeline/: __init__.py  sequence.py  timeline.py  video.py
tests/: conftest.py  test_live.py  test_normalization.py  test_parquet_source.py  test_phase2_layers.py  test_phase2_render.py  test_render_smoke.py  test_rolling_normalization.py  test_sequence.py  test_sync_source.py  test_timeline.py  test_topology_independence.py
tests/descriptors/: Mark2_tiny.json  RobotFinger_v1.json
