[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sentrixviz"
version = "0.1.0"
description = "Topology-driven visualization SDK for the Sentrix stack (Phase 0/1: parquet playback + headless PNG)."
requires-python = ">=3.11"
dependencies = [
  # sentrix_contracts is the shared cross-stack contract, now a standalone
  # package (extracted from SentrixCapture, CON-1). Install editable from
  # ../SentrixContracts if not on an index:  pip install -e ../SentrixContracts
  "sentrix-contracts>=0.1.0",
  "numpy>=1.24",
  "pyarrow>=14",
  "matplotlib>=3.7",
]

[project.optional-dependencies]
# `dev` is the standardized test-deps extra across the ecosystem; `test` kept as
# a back-compatible alias.
dev = ["pytest>=7"]
test = ["pytest>=7"]

[project.scripts]
sentrixviz = "sentrixviz.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"
filterwarnings = ["default"]
